Trello#2 | [Thejaswini/Hardik] | Add . Feature toggle for movie_schedule

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "query-string": "^6.12.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-feature-toggles": "^3.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1",
     "typeface-roboto": "^0.0.75",
