--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
+  "eslint": {
     "extends": "react-app"
   },
   "browserslist": {
