--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@material-ui/lab": "^4.0.0-alpha.47",
     "axios": "^0.19.0",
     "formik": "^2.1.4",
+    "jspdf": "^2.5.1",
     "moment": "^2.26.0",
     "prop-types": "^15.5.10",
     "query-string": "^6.12.1",
